--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "@mars-man/events",
   "version": "1.0.0",
   "description": "for events",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
   "types": "lib/index.d.ts",
+  "module" : "lib/index.js",
+  "type": "commonjs",
   "directories": {
     "test": "__tests__"
   },
   "scripts": {
     "test": "jest",
     "prepublish": "tsc -b",
-    "build": "tsc -b"
+    "build": "tsc -b && tsc -p tsconfig-cjs.json"
   },
   "author": "Marc Frame",
   "license": "MIT",
